--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "node-sass": "^4.9.2",
-    "parcel-bundler": "^1.9.7"
+    "parcel-bundler": "^1.9.7",
+    "rimraf": "^2.6.2"
   },
   "scripts": {
+    "clean": "rimraf dist/",
     "start": "parcel serve src/index.html",
-    "build": "parcel build src/index.html"
+    "copyManifest": "cp manifest.json dist/manifest.json",
+    "build": "yarn clean && parcel build src/index.html && yarn copyManifest"
   }
 }
