--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-  "plugins": ["transform-class-properties", "transform-object-rest-spread"],
+  "plugins": [
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "transform-decorators-legacy"
+  ]
 }
+
