--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rematch/core": ">=1.0.0-alpha.0",
     "@rematch/persist": "^1.1.0",
     "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "human-format": "^0.10.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
