--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "react-redux": "^5.0.7"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "eslint": "^5.3.0",
+    "eslint-plugin-react": "^7.10.0",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7",
     "rimraf": "^2.6.2"
