--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "timeago.js": "^3.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
