--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^5.3.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.9.7",
+    "prettier": "^1.14.2",
     "rimraf": "^2.6.2"
   },
   "scripts": {
