Fix selected index when deleting a filter + improve overall stability

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
-    "timeago.js": "^3.0.2"
+    "timeago.js": "^3.0.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
