--- a/.eslintrc
+++ b/.eslintrc
@@ -6,15 +6,16 @@
   ],
   "parser": "babel-eslint",
   "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-          "jsx": true
-      }
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "rules": {
     "no-console": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/no-deprecated": "off"
   },
   "env": {
     "es6": true,
