--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "Github Dashboard",
-  "short_name": "Github Dashboard",
+  "name": "OctoLenses",
+  "version": "<version>",
+  "short_name": "OctoLenses Browser Extension",
   "description":
     "Watch your repos and discover awesome things directly from your New Tab page.",
-  "version": "0.1",
   "permissions": ["tabs", "storage", "webNavigation", "*://*.github.com/*"],
   "chrome_url_overrides": {
     "newtab": "index.html"
