Add error handling of issues fetching (fix #9 #12)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "contrast": "^1.0.1",
+    "es6-error": "^4.1.1",
     "human-format": "^0.10.0",
     "immer": "^1.5.0",
     "lodash": "^4.17.10",
