--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,11 @@
   },
   "browser_action": {
     "default_title": "Github Dashboard"
+  },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   }
 }
