--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "clean": "rimraf dist/",
     "start": "parcel serve src/index.html",
     "copyManifest": "cp manifest.json dist/manifest.json",
+    "copyIcons": "cp -r icons/ dist/icons/",
     "syncManifestVersion": "version=$(cat package.json | jq -r .version) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
-    "build:unpacked": "yarn clean && parcel build src/index.html && yarn copyManifest && yarn syncManifestVersion",
+    "build:unpacked": "yarn clean && parcel build src/index.html && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-browser-extension.zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release"
