--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "version": "<version>",
   "short_name": "OctoLenses Browser Extension",
   "description": "Watch your repos and discover awesome things directly from your New Tab page.",
-  "permissions": [],
-  "chrome_url_overrides": {
-    "newtab": "index.html"
+  "permissions": ["tabs"],
+  "background": {
+    "scripts": ["override-new-tab-page.js"]
   },
   "browser_action": {
     "default_title": "Github Dashboard"
