--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "copyManifest": "cp manifest.json dist/manifest.json",
     "copyIcons": "cp -r icons/ dist/icons/",
     "syncManifestVersion": "version=$(cat package.json | jq -r .version) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
-    "build:unpacked": "yarn clean && parcel build src/index.html && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
+    "build:app": "parcel build src/index.html",
+    "build:background": "parcel build src/background/override-new-tab-page.js",
+    "build:unpacked": "yarn clean && yarn build:app && yarn build:background && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-browser-extension.zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release"
