--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "start": "parcel serve src/index.html",
     "copyManifest": "cp manifest.json dist/manifest.json",
     "copyIcons": "cp -r icons/ dist/icons/",
-    "syncManifestVersion": "version=$(cat package.json | jq -r .version) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
+    "syncManifestVersion": "version=$(jq -r .version package.json) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
     "build:app": "parcel build src/index.html",
     "build:background": "parcel build src/background/index.js --out-file background.js",
     "build:unpacked": "yarn clean && yarn build:app && yarn build:background && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
-    "compress": "cd dist/ && zip -rq ../octolenses-browser-extension.zip *",
+    "compress": "cd dist/ && zip -rq ../octolenses-browser-extension-$(jq -r .version ../package.json).zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release"
   }
