--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.6.2",
     "react": ">= 16.3.0",
     "react-dom": ">= 16.3.0",
+    "react-sortable-hoc": "^1.5.3",
     "styled-components": "^4.1.3",
     "timeago.js": "^3.0.2",
     "uuid": "^3.3.2"
