--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "mobx-react": "^5.2.5",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": ">= 16.3.0",
-    "react-dom": ">= 16.3.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "react-sortable-hoc": "^1.5.3",
     "styled-components": "^4.1.3",
     "timeago.js": "^3.0.2",
