--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
+    "clipboard": "^2.0.4",
     "contrast": "^1.0.1",
     "es6-error": "^4.1.1",
     "human-format": "^0.10.0",
