--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "semver": "^5.5.0",
-    "tailwindcss": "^0.7.3"
+    "tailwindcss": "^0.7.3",
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "clean": "rimraf dist/",
