--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "skipLibCheck": true,
     "noEmitOnError": false,
     "experimentalDecorators": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "types": ["chrome"]
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
