--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "<version>",
   "short_name": "OctoLenses Browser Extension",
   "description": "Watch your repos and discover awesome things directly from your New Tab page.",
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "identity"],
   "background": {
     "scripts": ["background.js"]
   },
