Very simple implementation of a caching service worker

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "version": "<version>",
   "short_name": "OctoLenses Browser Extension",
   "description": "Watch your repos and discover awesome things directly from your New Tab page.",
-  "permissions": ["tabs", "identity"],
+  "permissions": ["tabs", "identity", "*://*.github.com/*"],
   "background": {
     "scripts": ["background.js"]
   },
