--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Renan GEHAN <rgehan94@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/object-hash": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
     "clipboard": "^2.0.4",
@@ -18,6 +19,7 @@
     "mobx-react": "^5.2.5",
     "mobx-react-lite": "^1.1.1",
     "moment": "^2.22.2",
+    "object-hash": "^1.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
