--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Renan GEHAN <rgehan94@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.4.0",
     "@types/object-hash": "^1.2.0",
     "babel-polyfill": "^6.26.0",
     "classnames": "^2.2.6",
@@ -29,6 +30,10 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-decorators": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
     "@types/chrome": "^0.0.81",
     "@types/classnames": "^2.2.7",
     "@types/clipboard": "^2.0.1",
@@ -36,24 +41,13 @@
     "@types/react-sortable-hoc": "^0.6.5",
     "@types/styled-components": "^4.1.12",
     "@types/uuid": "^3.4.4",
-    "autoprefixer": "^9.4.6",
-    "babel-eslint": "^8.2.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "eslint": "^5.3.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "node-sass": "^4.9.2",
     "normalize.css": "^8.0.1",
-    "parcel-bundler": "^1.9.7",
+    "parcel-bundler": "^1.12.3",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
-    "semver": "^5.5.0",
+    "sass": "^1.17.3",
     "tailwindcss": "^0.7.3",
-    "tslint": "^5.14.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.4000"
   },
   "scripts": {
     "clean": "rimraf dist/",
@@ -66,6 +60,7 @@
     "build:unpacked": "yarn clean && yarn build:app && yarn build:background && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-$(jq -r .version ../package.json).zip *",
     "build": "yarn build:unpacked && yarn compress",
-    "release": "./scripts/release"
+    "release": "./scripts/release",
+    "test": "jest"
   }
 }
