--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "rimraf": "^2.6.2",
     "sass": "^1.17.3",
     "tailwindcss": "^0.7.3",
+    "tslint": "^5.14.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.3.4000"
   },
   "scripts": {
