--- a/package.json
+++ b/package.json
@@ -37,16 +37,19 @@
     "@types/chrome": "^0.0.81",
     "@types/classnames": "^2.2.7",
     "@types/clipboard": "^2.0.1",
+    "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/react-sortable-hoc": "^0.6.5",
     "@types/styled-components": "^4.1.12",
     "@types/uuid": "^3.4.4",
+    "jest": "^24.5.0",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "sass": "^1.17.3",
     "tailwindcss": "^0.7.3",
+    "ts-jest": "^24.0.0",
     "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
