--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "noEmitOnError": false,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "types": ["chrome"]
+    "types": ["chrome", "jest"]
   },
   "include": ["./src/**/*.ts", "./src/**/*.tsx"],
   "exclude": ["node_modules", "dist"]
