--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/styled-components": "^4.1.12",
     "@types/uuid": "^3.4.4",
     "jest": "^24.5.0",
+    "jest-localstorage-mock": "^2.4.0",
     "normalize.css": "^8.0.1",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.14.2",
