Fetch only one commit to make things faster

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
       - name: Cypress run
         uses: cypress-io/github-action@v1
         with:
