Finish migrating files to TS

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/clipboard": "^2.0.1",
     "@types/jest": "^24.0.22",
     "@types/lodash": "^4.14.146",
+    "@types/react-dom": "^16.9.4",
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/styled-components": "^4.1.20",
     "@types/uuid": "^3.4.4",
