--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.8.0",
     "react-sortable-hoc": "^1.10.1",
+    "recompose": "^0.30.0",
     "styled-components": "^4.1.3",
     "timeago.js": "^3.0.2",
     "uuid": "^3.3.3"
@@ -40,6 +41,7 @@
     "@types/lodash": "^4.14.146",
     "@types/react-dom": "^16.9.4",
     "@types/react-sortable-hoc": "^0.7.1",
+    "@types/recompose": "^0.30.7",
     "@types/styled-components": "^4.1.20",
     "@types/uuid": "^3.4.4",
     "cypress": "^3.6.1",
