--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,16 @@
 name: E2E Tests
 on: [push]
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Run ESLint
+        uses: gimenete/eslint-action@1.0
+
   unit-tests:
     runs-on: ubuntu-latest
     steps:
@@ -18,7 +28,7 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Cypress run
+      - name: Run Cypress
         uses: cypress-io/github-action@v1
         with:
           record: true
