Run tsc to check if typescript is valid

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Run ESLint
         run: yarn lint
 
+      - name: Run tsc
+        run: tsc --noEmit
+
       - name: Run Jest
         run: yarn test
 
