--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,31 @@
 name: E2E Tests
 on: [push]
 jobs:
-  unit-tests:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
+
+      - name: Restore node_modules folder
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-cache-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cache-
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Run ESLint
+        run: yarn lint
+
       - name: Run Jest
-        uses: stefanoeb/jest-action@1.0.0
+        run: yarn test
+
 
   integration-tests:
     runs-on: ubuntu-latest
@@ -18,7 +34,8 @@ jobs:
         uses: actions/checkout@v1
         with:
           fetch-depth: 1
-      - name: Cypress run
+
+      - name: Run Cypress
         uses: cypress-io/github-action@v1
         with:
           record: true
