--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
     "@types/recompose": "^0.30.7",
     "@types/styled-components": "^4.1.20",
     "@types/uuid": "^3.4.4",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "cypress": "^3.6.1",
+    "eslint": "^6.7.0",
+    "eslint-plugin-react": "^7.16.0",
     "jest": "^24.5.0",
     "jest-localstorage-mock": "^2.4.0",
     "parcel-bundler": "^1.12.3",
@@ -54,10 +58,6 @@
     "sass": "^1.22.12",
     "tailwindcss": "^1.1.3",
     "ts-jest": "^24.1.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.1.0",
     "typescript": "^3.6.4"
   },
   "scripts": {
@@ -74,6 +74,7 @@
     "release": "./scripts/release",
     "screenshots": "./scripts/screenshots",
     "test": "jest",
-    "e2e": "cypress open"
+    "e2e": "cypress open",
+    "lint": "eslint --ext ts,tsx src/"
   }
 }
