add-tsc-check (#130)
* Run tsc to check if typescript is valid

* Fix type of cardComponent member in AbstractProvider

* Fix type of FilterLink

* Fix missing types for 'contrast' package

* Refactor lodash chain to circumvent non-functional types

* Remove magic setter in SettingsStore

* Remove type error when exposing stores on the window

* Add badge

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: E2E Tests
+name: Lint & Tests
 on: [push]
 jobs:
   lint:
@@ -22,6 +22,9 @@ jobs:
 
       - name: Run ESLint
         run: yarn lint
+
+      - name: Run tsc
+        run: tsc --noEmit
 
       - name: Run Jest
         run: yarn test
