--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,5 @@
 {
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose": true }]
+    ["@babel/plugin-proposal-decorators", { "legacy": true }]
   ]
 }
