Migrate to manifest v3

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "copyIcons": "cp -r icons/ dist/icons/",
     "syncManifestVersion": "version=$(jq -r .version package.json) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
     "build:app": "parcel build src/index.html",
-    "build:background": "parcel build src/background/index.js --out-file background.js",
-    "build:unpacked": "yarn clean && yarn build:app && yarn build:background && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
+    "build:service-worker": "parcel build src/service_worker/index.js --out-file service_worker.js",
+    "build:unpacked": "yarn clean && yarn build:app && yarn build:service-worker && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-$(jq -r .version ../package.json).zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release",
