--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.19.2",
-    "cypress": "^9.2.0",
+    "cypress": "12.16.0",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.18.3",
     "jest": "^24.5.0",
