Migrate to manifest v3 (#217)

--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@types/chrome": "^0.0.91",
+    "@types/chrome": "^0.0.239",
     "@types/classnames": "^2.2.9",
     "@types/clipboard": "^2.0.1",
     "@types/jest": "^24.0.22",
     "@types/lodash": "^4.14.146",
+    "@types/node": "^20.3.3",
     "@types/react-dom": "^16.9.4",
     "@types/react-sortable-hoc": "^0.7.1",
     "@types/recompose": "^0.30.7",
@@ -46,7 +47,7 @@
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.19.2",
-    "cypress": "^9.2.0",
+    "cypress": "12.16.0",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.18.3",
     "jest": "^24.5.0",
@@ -67,8 +68,8 @@
     "copyIcons": "cp -r icons/ dist/icons/",
     "syncManifestVersion": "version=$(jq -r .version package.json) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
     "build:app": "parcel build src/index.html",
-    "build:background": "parcel build src/background/index.js --out-file background.js",
-    "build:unpacked": "yarn clean && yarn build:app && yarn build:background && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
+    "build:service-worker": "parcel build src/service_worker/index.js --out-file service_worker.js",
+    "build:unpacked": "yarn clean && yarn build:app && yarn build:service-worker && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-$(jq -r .version ../package.json).zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release",
