--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "github-trending-chrome-extension",
+  "targets": {
+    "app": {
+      "context": "browser",
+      "distDir": "dist/",
+      "source": "src/index.html"
+    },
+    "service_worker": {
+      "context": "service-worker",
+      "distDir": "dist/service_worker/",
+      "source": "src/service_worker/index.js"
+    }
+  },
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "version": "2.1.2",
-  "main": "index.js",
   "author": "Renan GEHAN <rgehan94@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -34,6 +46,9 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@parcel/config-default": "^2.10.0",
+    "@parcel/transformer-sass": "2.10.0",
+    "@parcel/transformer-typescript-tsc": "^2.10.0",
     "@types/chrome": "^0.0.239",
     "@types/classnames": "^2.2.9",
     "@types/clipboard": "^2.0.1",
@@ -52,8 +67,9 @@
     "eslint-plugin-react": "^7.18.3",
     "jest": "^24.5.0",
     "jest-localstorage-mock": "^2.4.0",
-    "parcel-bundler": "^1.12.3",
+    "parcel": "^2.0.0",
     "prettier": "^1.19.1",
+    "process": "^0.11.10",
     "puppeteer": "^2.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.24.2",
@@ -67,9 +83,7 @@
     "copyManifest": "cp manifest.json dist/manifest.json",
     "copyIcons": "cp -r icons/ dist/icons/",
     "syncManifestVersion": "version=$(jq -r .version package.json) && sed -i '' \"s/<version>/$version/\" dist/manifest.json && echo \"Updated manifest with version: $version\"",
-    "build:app": "parcel build src/index.html",
-    "build:service-worker": "parcel build src/service_worker/index.js --out-file service_worker.js",
-    "build:unpacked": "yarn clean && yarn build:app && yarn build:service-worker && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
+    "build:unpacked": "yarn clean && parcel build && yarn copyManifest && yarn copyIcons && yarn syncManifestVersion",
     "compress": "cd dist/ && zip -rq ../octolenses-$(jq -r .version ../package.json).zip *",
     "build": "yarn build:unpacked && yarn compress",
     "release": "./scripts/release",
