--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^2.19.2",
+    "autoprefixer": "^10.4.16",
     "cypress": "12.16.0",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.18.3",
@@ -73,7 +74,7 @@
     "puppeteer": "^2.0.0",
     "rimraf": "^3.0.2",
     "sass": "^1.24.2",
-    "tailwindcss": "^1.1.3",
+    "tailwindcss": "2",
     "ts-jest": "^24.3.0",
     "typescript": "^3.8.3"
   },
